--- a/kettle-plugins/hdfs/pom.xml
+++ b/kettle-plugins/hdfs/pom.xml
@@ -3,16 +3,16 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>pentaho</groupId>
-    <artifactId>pentaho-big-data-kettle-plugins</artifactId>
-    <version>10.1.0.0-SNAPSHOT</version>
+    <groupId>org.tahopen</groupId>
+    <artifactId>tahopen-big-data-kettle-plugins</artifactId>
+    <version>0.1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>pentaho-big-data-kettle-plugins-hdfs</artifactId>
-  <version>10.1.0.0-SNAPSHOT</version>
+  <artifactId>tahopen-big-data-kettle-plugins-hdfs</artifactId>
+  <version>0.1.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>Pentaho Community Edition Project: ${project.artifactId}</name>
-  <description>a Pentaho open source project</description>
-  <url>http://www.pentaho.com</url>
+  <name>Tahopen Community Edition Project: ${project.artifactId}</name>
+  <description>a Tahopen open source project</description>
+  <url>http://www.tahopen.org</url>
   <properties>
     <publish-sonar-phase>site</publish-sonar-phase>
     <mockito.version>3.12.4</mockito.version>
@@ -20,13 +20,13 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.pentaho</groupId>
+      <groupId>org.tahopen</groupId>
       <artifactId>shim-api</artifactId>
       <version>${pentaho-hadoop-shims.version}</version>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-big-data-kettle-plugins-common-ui</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-big-data-kettle-plugins-common-ui</artifactId>
       <version>${project.version}</version>
       <exclusions>
         <exclusion>
@@ -36,26 +36,26 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>pentaho-kettle</groupId>
+      <groupId>tahopen-kettle</groupId>
       <artifactId>kettle-core</artifactId>
       <version>${pdi.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>pentaho-kettle</groupId>
+      <groupId>tahopen-kettle</groupId>
       <artifactId>kettle-engine</artifactId>
       <version>${pdi.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>pentaho-kettle</groupId>
+      <groupId>tahopen-kettle</groupId>
       <artifactId>kettle-ui-swt</artifactId>
       <version>${pdi.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-platform-core</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-platform-core</artifactId>
       <version>${platform.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -78,7 +78,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>pentaho-kettle</groupId>
+      <groupId>tahopen-kettle</groupId>
       <artifactId>kettle-engine</artifactId>
       <version>${pdi.version}</version>
       <classifier>tests</classifier>
@@ -91,8 +91,8 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-big-data-legacy</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-big-data-legacy</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
       <exclusions>
@@ -103,8 +103,8 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-big-data-impl-cluster</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-big-data-impl-cluster</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
       <exclusions>
@@ -115,8 +115,8 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-metaverse-api</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-metaverse-api</artifactId>
       <version>${pentaho-metaverse.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -128,7 +128,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>pentaho-kettle</groupId>
+      <groupId>tahopen-kettle</groupId>
       <artifactId>kettle-core</artifactId>
       <version>${pdi.version}</version>
       <classifier>tests</classifier>
